--- a/src/i18n/locales/en_old.json
+++ b/src/i18n/locales/en_old.json
@@ -7,7 +7,7 @@
   },
   "home": {
     "title": "Robin DIJOUX",
-    "subtitle": "Full-stack development & architecture",
+    "subtitle": "Full-Stack Developer & UI/UX Designer",
     "description": "Passionate about creating innovative and high-performance digital experiences. I combine technical expertise and aesthetic sense to bring your projects to life.",
     "stats": {
       "projects": "Projects",
@@ -20,7 +20,7 @@
     },
     "sections": {
       "featuredProjects": "Featured Projects",
-      "featuredProjectsDescription": "Discover my most accomplished achievements and representative of my technical expertise.",
+      "featuredProjectsDescription": "Discover my most accomplished and representative achievements of my technical expertise.",
       "otherProjects": "Other Projects",
       "otherProjectsDescription": "Explore all my projects and experiments",
       "contact": "Let's Work Together",
@@ -40,21 +40,21 @@
     "backToProjects": "Back to projects",
     "notFound": "Project not found",
     "media": "Media",
-    "createNew": "Create new project",
-    "generalInfo": "General information",
-    "name": "Project name",
+    "createNew": "Create New Project",
+    "generalInfo": "General Information",
+    "name": "Project Name",
     "namePlaceholder": "My awesome project",
-    "shortDescription": "Short description",
-    "shortDescPlaceholder": "A short description of the project",
+    "shortDescription": "Short Description",
+    "shortDescPlaceholder": "A brief description of the project",
     "shortDescHelper": "Description displayed in the project list",
     "description": "Description",
     "descPlaceholder": "Detailed project description...",
     "links": "Links",
-    "repositoryLink": "Repository link",
-    "projectLink": "Project link",
+    "repositoryLink": "Repository Link",
+    "projectLink": "Project Link",
     "technologyPlaceholder": "React",
     "dropFilesHere": "Drop your files here...",
-    "dragDropFiles": "Drag and drop your files or click to select",
+    "dragDropFiles": "Drag & drop files or click to select",
     "supportedFormats": "Supported formats: Images, Videos, PDF, Documents",
     "maxFileSize": "Max size: 50MB",
     "maxFiles": "Maximum {{max}} files",
@@ -133,15 +133,15 @@
   "notFound": {
     "title": "404",
     "message": "Oops! Page not found",
-    "returnHome": "Return home"
+    "returnHome": "Return to Home"
   },
   "errors": {
     "tooManyFiles": "Too many files",
     "maxFilesLimit": "You cannot upload more than {{max}} files",
     "fileTooLarge": "File too large",
-    "maxFileSize": "File {{filename}} exceeds the 50MB size limit",
+    "maxFileSize": "The file {{filename}} exceeds the 50MB size limit",
     "uploadFailed": "Upload failed",
-    "uploadFailedDesc": "Unable to upload file {{filename}}",
+    "uploadFailedDesc": "Failed to upload file {{filename}}",
     "noMedia": "No media",
     "noMediaDesc": "Please upload at least one media file",
     "projectCreationFailed": "Project creation failed",
@@ -163,5 +163,17 @@
     "fileUploadedDesc": "File {{filename}} uploaded successfully",
     "projectCreated": "Project created",
     "projectCreatedDesc": "Project {{name}} created successfully"
+  },
+  "auth": {
+    "loggedInAs": "Logged in as {{email}}",
+    "signIn": "Sign In",
+    "signOut": "Sign Out",
+    "loading": "Loading...",
+    "loginRequired": "Login required to create a project",
+    "signingIn": "Signing in...",
+    "authError": "An error occurred during authentication:",
+    "returnHome": "Return to Home",
+    "connectionRequired": "Connection required",
+    "connectionRequiredDesc": "You must be logged in to access this functionality."
   }
 }
