--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -158,6 +158,62 @@
     "unknown": "Erreur inconnue",
     "httpError": "Erreur HTTP: {{status}} - {{statusText}}"
   },
+  "about": {
+    "title": "Mon Parcours",
+    "description": "Découvrez mon parcours académique et professionnel, depuis mes études d'ingénieur jusqu'à mon expertise actuelle en développement logiciel et architecture.",
+    "timeline": {
+      "prepIntegree": {
+        "title": "École Préparatoire Intégrée",
+        "description": "Début de mes études d'ingénieur à Polytech Nice avec une formation solide en mathématiques, physique et informatique."
+      },
+      "cycleIngenieur": {
+        "title": "Cycle Ingénieur Informatique",
+        "description": "Spécialisation en informatique avec apprentissage des langages de programmation, algorithmes et architecture logicielle."
+      },
+      "challengeJeunePousse": {
+        "title": "Victoire Challenge Jeunes Pousses",
+        "description": "Reconnaissance de l'innovation et de l'entrepreneuriat avec une victoire au Challenge Jeunes Pousses. Projet à vocation écologique, pour la mise en oeuvre grande échelle du ticket de caisse digital."
+      },
+      "stageAccenture": {
+        "title": "Stage Ingénieur Logiciel - Accenture",
+        "description": "Première expérience professionnelle en tant qu'ingénieur logiciel. Développement d'une plateforme de réservation pour les compagnies aériennes."
+      },
+      "stageOrange": {
+        "title": "Stage Ingénieur Logiciel - Orange Business",
+        "description": "Approfondissement des compétences techniques. Activités de développement et de conception sur une plateforme d'analyse éco-conception de sites web. Migration vers le cloud AWS."
+      },
+      "diplome": {
+        "title": "Diplôme Ingénieur - Spécialisation Architecture Logicielle",
+        "description": "Obtention du diplôme d'ingénieur avec une spécialisation en architecture logicielle."
+      },
+      "ingenieurOrange": {
+        "title": "Ingénieur Logiciel - Orange Business",
+        "description": "Poste d'ingénieur logiciel pour une plateforme de cloud orientée réseau. Activités de développement, intégration/déploiement continue et conception d'architecture."
+      },
+      "certificationAWS": {
+        "title": "Certification AWS Cloud Practitioner",
+        "description": "Certification AWS démontrant une compréhension fondamentale des services cloud et des bonnes pratiques."
+      },
+      "certificationDevOps": {
+        "title": "Certification DevOps Foundation",
+        "description": "Certification en DevOps couvrant les principes, pratiques et outils de développement et d'opérations."
+      }
+    },
+    "types": {
+      "education": "Formation",
+      "achievement": "Récompense",
+      "work": "Expérience"
+    },
+    "skills": {
+      "title": "Mes Compétences",
+      "education": "Formation Solide",
+      "educationDesc": "Formation d'ingénieur complète avec spécialisation en architecture logicielle.",
+      "experience": "Expérience Pratique",
+      "experienceDesc": "Expérience professionnelle diversifiée dans des entreprises de renom du secteur technologique.",
+      "innovation": "Innovation",
+      "innovationDesc": "Capacité à innover et entreprendre, reconnue par des prix et récompenses professionnelles."
+    }
+  },
   "success": {
     "fileUploaded": "Fichier uploadé",
     "fileUploadedDesc": "Le fichier {{filename}} a été uploadé avec succès",
