--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -8,7 +8,7 @@
   "home": {
     "title": "Robin DIJOUX",
     "subtitle": "Développement fullstack & architecture",
-    "description": "Passionné par l'approche centrée sur le produit et l'expérience utilisateur, je crée des applications web robustes et fonctionnelles qui répondent à vos besoins.",
+    "description": "Passionné par l'approche centrée sur le produit et les bonnes pratiques de développement, je crée des applications web robustes et fonctionnelles qui répondent à vos besoins.",
     "stats": {
       "projects": "Projets",
       "experience": "Années d'expérience",
