Update timeline event creation

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -161,6 +161,7 @@
     "unknown": "Unknown error",
     "httpError": "HTTP Error: {{status}} - {{statusText}}",
     "eventCreateError": "Error creating event",
+    "eventUpdateError": "Error updating event",
     "eventImportError": "Import error: {{error}}",
     "eventSaveError": "Save error",
     "eventDeleteError": "Error deleting event",
