--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -160,8 +160,9 @@
     "authRequiredDescription": "Vous devez être connecté pour effectuer cette action.",
     "unknown": "Erreur inconnue",
     "httpError": "Erreur HTTP: {{status}} - {{statusText}}",
-    "eventCreateError": "Erreur lors de la création de l'événement",
-    "eventImportError": "Erreur lors de l'import : {{error}}",
+        "eventCreateError": "Erreur lors de la création de l'événement",
+    "eventUpdateError": "Erreur lors de la mise à jour de l'événement",
+    "eventImportError": "Erreur d'import : {{error}}",
     "eventSaveError": "Erreur lors de la sauvegarde",
     "eventDeleteError": "Erreur lors de la suppression de l'événement",
     "eventsLoadError": "Erreur lors du chargement des événements",
