--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -173,44 +173,6 @@
   "about": {
     "title": "My Journey",
     "description": "Discover my academic and professional journey, from my engineering studies to my current expertise in software development and architecture.",
-    "timeline": {
-      "prepIntegree": {
-        "title": "Integrated Preparatory School",
-        "description": "Beginning of my engineering studies at Polytech Nice with solid training in mathematics, physics and computer science."
-      },
-      "cycleIngenieur": {
-        "title": "Computer Engineering Cycle",
-        "description": "Specialization in computer science with learning programming languages, algorithms and software architecture."
-      },
-      "challengeJeunePousse": {
-        "title": "Challenge Jeunes Pousses Victory",
-        "description": "Recognition of innovation and entrepreneurship with a victory in the Challenge Jeunes Pousses. Ecological project for large-scale implementation of digital receipts."
-      },
-      "stageAccenture": {
-        "title": "Software Engineer Internship - Accenture",
-        "description": "First professional experience as a software engineer. Development of a booking platform for airlines."
-      },
-      "stageOrange": {
-        "title": "Software Engineer Internship - Orange Business",
-        "description": "Deepening technical skills. Development and design activities on an eco-design analysis platform for websites. Migration to AWS cloud."
-      },
-      "diplome": {
-        "title": "Engineering Degree - Software Architecture Specialization",
-        "description": "Obtaining an engineering degree with specialization in software architecture."
-      },
-      "ingenieurOrange": {
-        "title": "Software Engineer - Orange Business",
-        "description": "Software engineer position for a network-oriented cloud platform. Development activities, continuous integration/deployment, and architecture design."
-      },
-      "certificationAWS": {
-        "title": "AWS Cloud Practitioner Certification",
-        "description": "AWS certification demonstrating fundamental understanding of cloud services and best practices."
-      },
-      "certificationDevOps": {
-        "title": "DevOps Foundation Certification",
-        "description": "DevOps certification covering principles, practices and development and operations tools."
-      }
-    },
     "types": {
       "education": "Education",
       "achievement": "Achievement",
@@ -266,7 +228,23 @@
     "cancel": "Cancel",
     "createButton": "Create event",
     "creating": "Creating...",
-    "deleteConfirm": "Are you sure you want to delete the event \"{{title}}\"?",
+    "deleteConfirm": "Confirm deletion",
+    "deleteConfirmDescription": "Are you sure you want to delete the event \"{{title}}\"? This action cannot be undone.",
+    "deleteSuccess": "Event deleted",
+    "deleteSuccessDescription": "The event has been successfully deleted.",
+    "clearAllConfirm": "Delete all events",
+    "clearAllConfirmDescription": "Are you sure you want to delete ALL events? This action cannot be undone.",
+    "clearAllSuccess": "All events deleted",
+    "clearAllSuccessDescription": "All events have been successfully deleted.",
+    "exportSuccess": "Export successful",
+    "exportSuccessDescription": "The events have been successfully exported.",
+    "importSuccess": "Import successful",
+    "importSuccessDescription": "The events have been successfully imported.",
+    "eventCreatedSuccess": "Event created",
+    "eventCreatedSuccessDescription": "The event has been successfully created.",
+    "eventCreatedSuccessRedirectQuestion": "Would you like to go to the event administration page or stay here to create another event?",
+    "stayHere": "Stay here",
+    "goToAdmin": "Go to administration",
     "dataPreview": "Data preview (Dev Mode)",
     "image": "Image",
     "typeLabels": {
