lighten admin header

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -3,6 +3,8 @@
     "projects": "Projects",
     "about": "About",
     "contact": "Contact",
+    "administration": "Administration",
+    "events": "Events",
     "newProject": "New project",
     "newEvent": "New event",
     "manageEvents": "Manage events",
