--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -3,6 +3,8 @@
     "projects": "Projets",
     "about": "À propos",
     "contact": "Contact",
+    "administration": "Administration",
+    "events": "Événements",
     "newProject": "Nouveau projet",
     "newEvent": "Nouvel événement",
     "manageEvents": "Gérer les événements",
