Update homepage stats

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -17,7 +17,7 @@
     "stats": {
       "projects": "Projects",
       "experience": "Years of experience",
-      "technologies": "Technologies"
+      "certifications": "Certifications"
     },
     "cta": {
       "viewProjects": "View my projects",
