--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -17,7 +17,7 @@
     "stats": {
       "projects": "Projets",
       "experience": "Années d'expérience",
-      "technologies": "Technologies"
+      "certifications": "Certifications"
     },
     "cta": {
       "viewProjects": "Voir mes projets",
