Update layout of technos

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -39,7 +39,7 @@
     "createdOn": "Created on",
     "viewLive": "View live",
     "viewCode": "View code",
-    "technologies": "Technologies used",
+    "technologies": "Tech",
     "details": "Project details",
     "mediaGallery": "Media gallery",
     "backToProjects": "Back to projects",
