--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -39,7 +39,7 @@
     "createdOn": "Créé le",
     "viewLive": "Voir en ligne",
     "viewCode": "Voir le code",
-    "technologies": "Technologies utilisées",
+    "technologies": "Technos",
     "details": "Détails du projet",
     "mediaGallery": "Galerie média",
     "backToProjects": "Retour aux projets",
