Remove default zoom and better handle video display

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -69,6 +69,7 @@
     "maxFiles": "Maximum {{max}} files",
     "selectFiles": "Select Files",
     "uploadedFiles": "Uploaded Files",
+    "mediaDetails": "Media Details",
     "altText": "Alt Text",
     "projectType": "Project type",
     "mobile": "Mobile",
